SimpleDBMSParser.java
/* Generated By:JavaCC: Do not edit this line. SimpleDBMSParser.java */
import com.sleepycat.je.Database;
import com.sleepycat.je.DatabaseException;
import com.sleepycat.je.DatabaseConfig;
import com.sleepycat.je.Environment;
import com.sleepycat.je.EnvironmentConfig;
import java.io.File;

import java.util.ArrayList;

public class SimpleDBMSParser implements SimpleDBMSParserConstants {
        // TODO : jj lexical state : space in quote
        public static void main(String args []) throws ParseException
        {
                // init
                Environment myDbEnvironment = null;
                Database db = null;
                EnvironmentConfig envConfig = new EnvironmentConfig();
                envConfig.setAllowCreate(true);
                myDbEnvironment = new Environment(new File("db/"), envConfig);
                DatabaseConfig dbConfig = new DatabaseConfig();
                dbConfig.setAllowCreate(true);
                dbConfig.setSortedDuplicates(true);
                dbConfig.setDeferredWrite(true);
                db = myDbEnvironment.openDatabase(null, "sampleDatabase", dbConfig);
                SimpleDBMSParser parser = new SimpleDBMSParser(System.in);

                DBProcessor dbp = new DBProcessor(db);
                System.out.print("DB_2016-12817> ");

                ArrayList < Query > ql;
                String s;
                while (true)
                {
                        try
                        {
                                ql = parser.command();
                                if (ql == null) break;

                                if (dbp.processQuery(ql))
                                        parser.ReInit(System.in);
                        }
                        catch (Exception e)
                        {
                                //e.printStackTrace();
                                System.out.println("Syntax error");
                                e.printStackTrace();
                                parser.ReInit(System.in);
                        }
                        System.out.print("DB_2016-12817> ");
                }
                if (db != null) db.close();
                if (myDbEnvironment != null) myDbEnvironment.close();
        }

// below are all the non-terminals for parsing.
  final public ArrayList < Query > command() throws ParseException {
        ArrayList < Query > ql;
    if (jj_2_1(2)) {
      ql = queryList();
                        {if (true) return ql;}
    } else if (jj_2_2(2)) {
      jj_consume_token(EXIT);
      jj_consume_token(SEMICOLON);
                        {if (true) return null;}
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

  final public ArrayList < Query > queryList() throws ParseException {
        ArrayList < Query > ql = new ArrayList < Query > ();
        Query q;
    label_1:
    while (true) {
      q = query();
      jj_consume_token(SEMICOLON);
                        ql.add(q);
                        {if (true) return ql;}
      if (jj_2_3(2)) {
        ;
      } else {
        break label_1;
      }
    }
                {if (true) return ql;}
    throw new Error("Missing return statement in function");
  }

  final public Query query() throws ParseException {
        Query q = new Query();
        CreateTableQuery cq;
        String dq;
        String eq;
        SelectQuery sq;
        InsertQuery iq;
        DeleteQuery tq;
    if (jj_2_4(3)) {
      cq = createTableQuery();
                                q.type = Query.QUERY_CREATE_TABLE;
                                q.cq = cq;
    } else if (jj_2_5(2)) {
      dq = dropTableQuery();
                                q.type = Query.QUERY_DROP_TABLE;
                                q.dq = dq;
    } else if (jj_2_6(2)) {
      eq = descQuery();
                                q.type = Query.QUERY_DESC;
                                q.eq = eq;
    } else if (jj_2_7(2)) {
      sq = selectQuery();
                                q.type = Query.QUERY_SELECT;
                                q.sq = sq;
    } else if (jj_2_8(2)) {
      iq = insertQuery();
                                q.type = Query.QUERY_INSERT;
                                q.iq = iq;
    } else if (jj_2_9(2)) {
      tq = deleteQuery();
                                q.type = Query.QUERY_DELETE;
                                q.tq = tq;
    } else if (jj_2_10(2)) {
      showTablesQuery();
                                q.type = Query.QUERY_SHOW_TABLES;
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
                {if (true) return q;}
    throw new Error("Missing return statement in function");
  }

  final public CreateTableQuery createTableQuery() throws ParseException {
        String s;
        ArrayList < TableElemInfo > tl;
        CreateTableQuery ctq = new CreateTableQuery();
    jj_consume_token(CREATE);
    jj_consume_token(TABLE);
    s = tableName();
    tl = tableElementList();
                ctq.tableName = s;
                ctq.tl = tl;
                {if (true) return ctq;}
    throw new Error("Missing return statement in function");
  }

  final public ArrayList < TableElemInfo > tableElementList() throws ParseException {
        ArrayList < TableElemInfo > tl = new ArrayList < TableElemInfo > ();
        TableElemInfo e;
    jj_consume_token(LEFT_PAREN);
    e = tableElement();
                tl.add(e);
    label_2:
    while (true) {
      if (jj_2_11(2)) {
        ;
      } else {
        break label_2;
      }
      jj_consume_token(COMMA);
      e = tableElement();
                        tl.add(e);
    }
    jj_consume_token(RIGHT_PAREN);
                {if (true) return tl;}
    throw new Error("Missing return statement in function");
  }

  final public TableElemInfo tableElement() throws ParseException {
        TableElemInfo t;
        ColumnInfo c;
    if (jj_2_12(2)) {
      c = columnDefinition();
                        t = new TableElemInfo();
                        t.type = TableElemInfo.ELEM_COLUMN;
                        t.ci = c;
    } else if (jj_2_13(2)) {
      t = tableConstraintDefinition();
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
                {if (true) return t;}
    throw new Error("Missing return statement in function");
  }

  final public ColumnInfo columnDefinition() throws ParseException {
        ColumnInfo c;
        String cn;
        int dt;
    cn = columnName();
    dt = dataType();
                c = new ColumnInfo(cn, dt);
    if (jj_2_14(2)) {
      jj_consume_token(NOT);
      jj_consume_token(NULL);
                c.notnull = true;
    } else {
      ;
    }
                {if (true) return c;}
    throw new Error("Missing return statement in function");
  }

  final public TableElemInfo tableConstraintDefinition() throws ParseException {
        TableElemInfo ti = new TableElemInfo();
        ArrayList < String > p;
        ForeignKeyInfo f;
    if (jj_2_15(2)) {
      p = primaryKeyConstraint();
                        ti.type = TableElemInfo.ELEM_PRIMARY;
                        ti.pi = p;
    } else if (jj_2_16(2)) {
      f = referentialConstraint();
                        ti.type = TableElemInfo.ELEM_FOREIGN;
                        ti.fi = f;
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
                {if (true) return ti;}
    throw new Error("Missing return statement in function");
  }

  final public ArrayList < String > primaryKeyConstraint() throws ParseException {
        ArrayList < String > al;
    jj_consume_token(PRIMARY);
    jj_consume_token(KEY);
    al = columnNameList();
                {if (true) return al;}
    throw new Error("Missing return statement in function");
  }

  final public ForeignKeyInfo referentialConstraint() throws ParseException {
        ArrayList < String > al1, al2;
        String tn;
    jj_consume_token(FOREIGN);
    jj_consume_token(KEY);
    al1 = columnNameList();
    jj_consume_token(REFERENCES);
    tn = tableName();
    al2 = columnNameList();
                {if (true) return new ForeignKeyInfo(al1, tn, al2);}
    throw new Error("Missing return statement in function");
  }

  final public ArrayList < String > columnNameList() throws ParseException {
        ArrayList < String > al = new ArrayList < String > ();
        String s;
    jj_consume_token(LEFT_PAREN);
    s = columnName();
                al.add(s);
    label_3:
    while (true) {
      if (jj_2_17(2)) {
        ;
      } else {
        break label_3;
      }
      jj_consume_token(COMMA);
      s = columnName();
                        al.add(s);
    }
    jj_consume_token(RIGHT_PAREN);
                {if (true) return al;}
    throw new Error("Missing return statement in function");
  }

  final public int dataType() throws ParseException {
        int v;
        Token s;
    if (jj_2_18(2)) {
      jj_consume_token(INT);
                        {if (true) return ColumnInfo.DATATYPE_INT;}
    } else if (jj_2_19(2)) {
      jj_consume_token(CHAR);
      jj_consume_token(LEFT_PAREN);
      s = jj_consume_token(INT_VALUE);
      jj_consume_token(RIGHT_PAREN);
                        v = Integer.parseInt(s.image);
                        if (v < 1) {if (true) return ColumnInfo.DATATYPE_INVALID;}
                        else {if (true) return v;}
    } else if (jj_2_20(2)) {
      jj_consume_token(DATE);
                        {if (true) return ColumnInfo.DATATYPE_DATE;}
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

  final public String tableName() throws ParseException {
        Token s;
    s = jj_consume_token(LEGAL_IDENTIFIER);
                {if (true) return s.image.toLowerCase();}
    throw new Error("Missing return statement in function");
  }

  final public String columnName() throws ParseException {
        Token s;
    s = jj_consume_token(LEGAL_IDENTIFIER);
                {if (true) return s.image.toLowerCase();}
    throw new Error("Missing return statement in function");
  }

  final public String dropTableQuery() throws ParseException {
        String tn;
    jj_consume_token(DROP);
    jj_consume_token(TABLE);
    tn = tableName();
                {if (true) return tn;}
    throw new Error("Missing return statement in function");
  }

  final public String descQuery() throws ParseException {
        String tn;
    jj_consume_token(DESC);
    tn = tableName();
                {if (true) return tn;}
    throw new Error("Missing return statement in function");
  }

  final public void showTablesQuery() throws ParseException {
    jj_consume_token(SHOW);
    jj_consume_token(TABLES);
                {if (true) return;}
  }

  final public SelectQuery selectQuery() throws ParseException {
        ArrayList<NameInfo > nil;
        SelectQuery sq;
    jj_consume_token(SELECT);
    nil = selectList();
    sq = tableExpression();
                sq.sell = nil;
                {if (true) return sq;}
    throw new Error("Missing return statement in function");
  }

  final public ArrayList<NameInfo > selectList() throws ParseException {
        ArrayList<NameInfo > nil = new ArrayList<NameInfo >();
        NameInfo ni;
    if (jj_2_22(2)) {
      jj_consume_token(WILDCARD);
                        {if (true) return null;}
    } else if (jj_2_23(2)) {
      ni = selectedColumn();
                                nil.add(ni);
      label_4:
      while (true) {
        if (jj_2_21(2)) {
          ;
        } else {
          break label_4;
        }
        jj_consume_token(COMMA);
        ni = selectedColumn();
                                        nil.add(ni);
      }
                        {if (true) return nil;}
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

  final public NameInfo selectedColumn() throws ParseException {
        NameInfo ni = new NameInfo();
        ni.tableName = null;
        ni.alias = null;
    if (jj_2_24(2)) {
      ni.tableName = tableName();
      jj_consume_token(PERIOD);
    } else {
      ;
    }
    ni.colName = columnName();
    if (jj_2_25(2)) {
      jj_consume_token(AS);
      ni.alias = columnName();
    } else {
      ;
    }
                {if (true) return ni;}
    throw new Error("Missing return statement in function");
  }

  final public SelectQuery tableExpression() throws ParseException {
        SelectQuery sq = new SelectQuery();
        sq.where = null;
    sq.from = fromClause();
    if (jj_2_26(2)) {
      sq.where = whereClause();
    } else {
      ;
    }
                {if (true) return sq;}
    throw new Error("Missing return statement in function");
  }

  final public ArrayList<NameInfo> fromClause() throws ParseException {
        ArrayList<NameInfo> trl;
    jj_consume_token(FROM);
    trl = tableReferenceList();
                {if (true) return trl;}
    throw new Error("Missing return statement in function");
  }

  final public ArrayList<NameInfo> tableReferenceList() throws ParseException {
        ArrayList<NameInfo > trl = new ArrayList<NameInfo >();
        NameInfo ni;
    ni = referedTable();
                trl.add(ni);
    label_5:
    while (true) {
      if (jj_2_27(2)) {
        ;
      } else {
        break label_5;
      }
      jj_consume_token(COMMA);
      ni = referedTable();
                        trl.add(ni);
    }
                {if (true) return trl;}
    throw new Error("Missing return statement in function");
  }

  final public NameInfo referedTable() throws ParseException {
        NameInfo ni = new NameInfo();
        ni.colName = null;
    ni.tableName = tableName();
    if (jj_2_28(2)) {
      jj_consume_token(AS);
      ni.alias = tableName();
    } else {
      ;
    }
                {if (true) return ni;}
    throw new Error("Missing return statement in function");
  }

  final public BoolExprInfo whereClause() throws ParseException {
        BoolExprInfo be;
    jj_consume_token(WHERE);
    be = booleanValueExpression();
                {if (true) return be;}
    throw new Error("Missing return statement in function");
  }

  final public BoolExprInfo booleanValueExpression() throws ParseException {
        BoolExprInfo ret = new BoolExprInfo(BoolExprInfo.EXPRTYPE_OR);
        BoolExprInfo be;
    be = booleanTerm();
                ret.add(be);
    label_6:
    while (true) {
      if (jj_2_29(2)) {
        ;
      } else {
        break label_6;
      }
      jj_consume_token(OR);
      be = booleanTerm();
                        ret.add(be);
    }
                if (ret.size() <= 1)
                        {if (true) return be;}
                {if (true) return ret;}
    throw new Error("Missing return statement in function");
  }

  final public BoolExprInfo booleanTerm() throws ParseException {
        BoolExprInfo ret = new BoolExprInfo(BoolExprInfo.EXPRTYPE_AND);
        BoolExprInfo be;
    be = booleanFactor();
                ret.add(be);
    label_7:
    while (true) {
      if (jj_2_30(2)) {
        ;
      } else {
        break label_7;
      }
      jj_consume_token(AND);
      be = booleanFactor();
                        ret.add(be);
    }
                if (ret.size() <= 1)
                        {if (true) return be;}
                {if (true) return ret;}
    throw new Error("Missing return statement in function");
  }

  final public BoolExprInfo booleanFactor() throws ParseException {
        boolean not = false;
        BoolExprInfo be;
    if (jj_2_31(2)) {
      jj_consume_token(NOT);
                not = true;
    } else {
      ;
    }
    be = booleanTest();
                if (not)
                        be.invert();
                {if (true) return be;}
    throw new Error("Missing return statement in function");
  }

  final public BoolExprInfo booleanTest() throws ParseException {
        BoolExprInfo be;
    if (jj_2_32(2)) {
      be = predicate();
    } else if (jj_2_33(2)) {
      be = parenthesizedBE();
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
                {if (true) return be;}
    throw new Error("Missing return statement in function");
  }

  final public BoolExprInfo parenthesizedBE() throws ParseException {
        BoolExprInfo be;
    jj_consume_token(LEFT_PAREN);
    be = booleanValueExpression();
    jj_consume_token(RIGHT_PAREN);
                {if (true) return be;}
    throw new Error("Missing return statement in function");
  }

  final public BoolExprInfo predicate() throws ParseException {
        CompPredicateInfo cp;
        BoolExprInfo be;
    if (jj_2_34(4)) {
      cp = comparisonPredicate();
                                {if (true) return new BoolExprInfo(cp);}
    } else if (jj_2_35(2)) {
      be = nullPredicate();
                                {if (true) return be;}
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

  final public CompPredicateInfo comparisonPredicate() throws ParseException {
        Operand co1, co2;
        Token op;
    co1 = compOperand();
    op = jj_consume_token(COMP_OP);
    co2 = compOperand();
                {if (true) return new CompPredicateInfo(co1, op.image, co2);}
    throw new Error("Missing return statement in function");
  }
